--- a/3/3.html
+++ b/3/3.html
@@ -8,6 +8,23 @@
     <title>3</title>
 </head>
 <body>
-    
+    <nav>
+
+    </nav>
+    <div class="row">
+        <div class="col">
+            <div class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel-inner">
+                    <img src="" alt="">
+                </div>
+                <div class="carousel-inner">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
