--- a/4/4.html
+++ b/4/4.html
@@ -1,13 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="4.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/4.css" />
     <title>4</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="header">
+        <div>
+          <img src="./assets/pic/1.png" />
+        </div>
+      </div>
+      <div class="header">
+        <span class="menu">Home</span>
+        <span class="menu">Age group</span>
+        <span class="menu">Destinations</span>
+        <span class="menu">Experiences</span>
+        <span class="menu">Info</span>
+        <span class="menu">Last link..</span>
+        <!-- <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Age group</a></li>
+            <li><a href="">Destinations</a></li>
+            <li><a href="">Experiences</a></li>
+            <li><a href="">Info</a></li>
+            <li><a href="">Last link..</a></li>
+        </ul> -->
+      </div>
+      <div class="header">
+        <input type="search" value="All Searches" />
+      </div>
+      <div class="header">
+        <p><a href="">Login</a></p>
+      </div>
+    </header>
+    <nav>
+      <div class="nav">
+        <div>Destination</div>
+        <div>home/ Destinations</div>
+      </div>
+    </nav>
+    <section>
+      <div class="section-top">
+        <h1><span class="destination">Destinations</span></h1>
+        <p>
+          Stay up to date and check out the deals for these trending
+          destinations
+        </p>
+      </div>
+      <div class="section-body">
+        <div class="section-body-top">
+          <div class="image-container">
+            <img src="./assets/pic/2.png" alt="" class="image" />
+            <div class="absolute"><p>Germany</p></div>
+          </div>
+          <div class="image-container">
+            <img src="./assets/pic/3.png" alt="" class="image" />
+            <div class="absolute"><p>Spain</p></div>
+          </div>
+          <div class="image-container">
+            <img src="./assets/pic/4.png" alt="" class="image" />
+            <div class="absolute"><p>Switzerland</p> </div>
+          </div>
+        </div>
+        <div class="section-body-bottom">
+          <div class="image-container">
+            <img src="./assets/pic/5.png" alt="" class="image" />
+            <div class="absolute"><p>London</p></div>
+          </div>
+          <div class="image-container">
+            <img src="./assets/pic/6.png" alt="" class="image" />
+            <div class="absolute"><p>Belgum</p> </div>
+          </div>
+          <div class="image-container">
+            <img src="./assets/pic/7.png" alt="" class="image" />
+            <div class="absolute"><p>USA</p> </div>
+          </div>
+
+        </div>
+        
+      </div>
+      <div class="section-button">
+        <button>View More</button>
+      </div>
+    </section>
+    <footer>
+      <div class="first-footter">
+        <div><h4>Subscribe to out free newsletter</h4></div>
+        <div>
+          <input type="text" name="" id="" value="Name" />
+          <input type="email" name="" id="" value="Email" />
+          <button type="submit">subscribe</button>
+        </div>
+      </div>
+      <div class="second-footer">
+        <div class="footer-item second-footer-1">
+          <img src="./assets/pic/1.png" alt="" />
+          <p>
+            Lorem ipsum dolor spisicing elit. Quam corrupti alias soluta, uno
+            suscipit! Temporibus illo non laboriosam eniam soluta!
+          </p>
+        </div>
+        <div class=" footer-item second-footer-2">
+          <h4>Booked ... now what?</h4>
+          <ol>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+            <li>Lorem ipsum dolor Lorem ipsum dolor</li>
+          </ol>
+        </div>
+        <div class=" footer-item second-footer-3">
+          <h4>Community</h4>
+          <ul>
+            <li><a href="#">Twiter</a></li>
+            <li><a href="#">facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Google+</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">Email</a></li>
+          </ul>
+        </div>
+        <div class=" footer-item second-footer-4">
+          <h4>Useful links</h4>
+          <ul>
+          <li><a href="#">lndlsd</a></li>
+          <li><a href="#">sers</a></li>
+          <li><a href="#">dtsdf</a></li>
+          <li><a href="#">amet</a></li>
+          <li><a href="#">asdfw</a></li>
+        </ul>
+        </div>
+      </div>
+      <div class="third-footer">
+        <p>group of young people ou dismission duccis // udk jlsidj</p>
+      </div>
+    </footer>
+  </body>
 </html>
