--- a/4/4.html
+++ b/4/4.html
@@ -30,9 +30,20 @@
             <li><a href="">Last link..</a></li>
         </ul> -->
       </div>
-      <div class="header">
+      <!-- <div class="header">
         <input type="search" value="All Searches" />
+      </div> -->
+      <div class="dropdown header">
+        <button class="dropbtn">All Searches
+          <img src="./assets/pic/drowndown.png" alt="">        
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
       </div>
+
       <div class="header">
         <p><a href="">Login</a></p>
       </div>
