--- a/3/3.html
+++ b/3/3.html
@@ -258,9 +258,9 @@
         </div>
 
       </footer>
-      <footer class="row bg-dark justify-content-between ">
+      <footer class="row bg-dark  ">
         <div class="col-12 col-md-12 col-lg-8 ">
-          <p class="text-light p-2 ml-3 mt-2 text-md-center">Lorem ipsum dolor, sit amet consectetur adipisicing eli <span class="text-warning">Maktab-Sharif</span></p>
+          <p class="text-light p-2  mt-2 text-md-center text-lg-left text-center" >Lorem ipsum dolor, sit amet consectetur adipisicing eli <span class="text-warning">Maktab-Sharif</span></p>
         </div>
         <div class="col-12 col-md-12 col-lg-4 align-self-center text-md-center text-center text-lg-right  ">
           <a href=""><img src="./assetes/pic/3.1.png"></a>
